--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
