--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "proxy": "http://localhost:5005",
   "scripts": {
     "test": "jest backend/test/*",
     "lint": "eslint backend/src/*.js",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
     "react-router-dom": "^5.2.0",
+    "redux-devtools-extension": "^2.13.8",
     "supertest": "^6.0.0",
     "swagger-ui-express": "^4.1.4"
   },
