--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
+    "react-modal": "^3.11.2",
+    "react-parallax": "^3.1.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "supertest": "^6.0.0",
     "swagger-ui-express": "^4.1.4"
   },
